Fixes autocomplete z-index

--- a/packages/metal-autocomplete/src/autocomplete.scss
+++ b/packages/metal-autocomplete/src/autocomplete.scss
@@ -8,7 +8,7 @@
 	border-radius: 2px;
 	overflow: hidden;
 	position: absolute;
-	z-index: 1;
+	z-index: $zindex-modal;
 
 	.list {
 		padding-bottom: 12px;
